feat: add hotkey settings toggle
- Add HotkeySettings component for managing in-app keyboard shortcuts
- Add hotkey toggle in Window & UI settings section
- Support enabling/disabling quick search via keyboard shortcuts
- Add i18n translations for hotkey settings

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -517,6 +517,11 @@
       "settings": "Settings",
       "title": "Default Launch Page"
     },
+    "hotkey": {
+      "description": "Enable or disable in-app keyboard shortcuts",
+      "note": "When enabled, you can type letters or numbers directly on package pages to quickly search.",
+      "title": "Hotkeys"
+    },
     "heldPackages": {
       "description": "Packages on hold are prevented from being updated via Pailer or Scoop.",
       "noPackagesHeld": "No packages are currently on hold.",
