--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -514,10 +514,15 @@
       "buckets": "仓库",
       "description": "选择应用程序启动时显示的页面。",
       "doctor": "诊断",
-      "installed": "软件",
+      "installed": "已安装",
       "search": "搜索",
       "settings": "设置",
       "title": "默认启动页面"
+    },
+    "hotkey": {
+      "description": "启用或禁用软件内键盘快捷键",
+      "note": "启用后，您可以在软件包页面直接输入字母或数字快速搜索。",
+      "title": "快捷键"
     },
     "heldPackages": {
       "description": "使用 scoop hold 命令保留的软件包，无法通过 Pailer 或 Scoop 更新。",
