--- a/src-tauri/resources/locales/en.json
+++ b/src-tauri/resources/locales/en.json
@@ -374,22 +374,7 @@
     "bar": {
       "clearSearch": "Clear search",
       "exactMatchTooltip": "Wrap with \"quotes\" for exact match",
-      "placeholder": "Search for apps from local Buckets",
-      "searchHelp": "Search help"
-    },
-    "emptyState": {
-      "title": "Search for Applications",
-      "description": "Search through packages from your local Scoop buckets"
-    },
-    "help": {
-      "title": "Search Format Help",
-      "description": "You can use special search formats to find packages more precisely:",
-      "examples": "Examples:",
-      "normalSearch": "Search for packages containing '7zip' in any bucket",
-      "bucketSearch": "Search for packages containing '7zip' only in buckets whose names contain 'main'",
-      "allBuckets": "Search for packages containing '7zip' in all buckets (same as normal search)",
-      "exactMatch": "Search for packages with exact name '7zip' only in buckets with exact name 'main'",
-      "note": "Tip: You can also start typing letters/numbers directly on the page to quickly search."
+      "placeholder": "Search for apps from local Buckets"
     },
     "filter": {
       "allBuckets": "All Buckets"
@@ -531,11 +516,6 @@
       "search": "Search",
       "settings": "Settings",
       "title": "Default Launch Page"
-    },
-    "hotkey": {
-      "description": "Enable or disable in-app keyboard shortcuts",
-      "note": "When enabled, you can type letters or numbers directly on package pages to quickly search.",
-      "title": "Hotkeys"
     },
     "heldPackages": {
       "description": "Packages on hold are prevented from being updated via Pailer or Scoop.",
